# social-dashboard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: app.py
api/routers/: posts.py  scraper_control.py  sources.py  trends.py
config/: settings.py
core/: models.py
dashboard/static/css/: dashboard.css
dashboard/static/js/: app.js
dashboard/templates/: index.html
data/: database.py  repositories.py  schema.py
scrapers/: base.py  news.py  reddit.py  scheduler.py  twitter.py
